base/mockserver/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: mockserver
  template:
    metadata:
      labels:
        deployment: mockserver
    spec:
      containers:
        - image: quay.io/rh_integration/mockserver:latest
          name: mockserver
          resources:
            limits:
              memory: 2G
          ports:
            - containerPort: 1080
              protocol: TCP
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "init-mockserver"]
