base/mockserver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mockserver
spec:
  ports:
    - name: 1080-tcp
      port: 1080
      protocol: TCP
      targetPort: 1080
  selector:
    deployment: mockserver
