base/mockserver/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mockserver
spec:
  port:
    targetPort: 1080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: mockserver
    weight: 100
  wildcardPolicy: None
